tests/NormalTests/paczka2/big_fuzzy/81166715.err
Error in line 2: 5VaEYS1E A974 47,4
Error in line 1: kAH2o91nLax S478 67,9
Error in line 7: jTACh5 A974 76,0
Error in line 4: 5VaEYS1E S478 15,9
Error in line 15: QYB6DvGM S478 260,2
Error in line 12: 5VaEYS1E A974 70,3
Error in line 19: QYB6DvGM A974 58,2
Error in line 21: 5VaEYS1E S743 65,4
Error in line 18: 5DKYrl S478 47,8
Error in line 47: jTACh5 A801 37,1
Error in line 55: 5DKYrl A801 20,7
Error in line 60: jTACh5 S743 18,9
Error in line 61: QYB6DvGM S478 94,3
Error in line 63: S743 S743 1801,5
Error in line 84: Fl77oULkmH S478 53,2
Error in line 85: jTACh5 S478 77,1
Error in line 94: kAH2o91nLax S743 8,7
Error in line 113: QYB6DvGM S743 44,2
Error in line 117: jTACh5 A974 96,5
Error in line 119: 5DKYrl A801 23,9
Error in line 116: QYB6DvGM A974 59,0
Error in line 128: 5VaEYS1E S743 17,0
Error in line 145: Fl77oULkmH A974 16,5
Error in line 144: S743 A974 97,5
Error in line 167: kAH2o91nLax S478 66,2
Error in line 172: Fl77oULkmH S478 148,6
Error in line 171: kAH2o91nLax A801 37,3
Error in line 175: QYB6DvGM S743 31,6
Error in line 186: S743 S478 49,8
Error in line 183: jTACh5 S478 2,8
Error in line 190: jTACh5 A801 49,2
Error in line 182: 5DKYrl A974 12,1
Error in line 188: S743 A801 95,1
Error in line 192: 5DKYrl S743 40,2
Error in line 207: S743 S478 42,9
Error in line 200: kAH2o91nLax A801 16,6
Error in line 225: kAH2o91nLax S743 88,5
Error in line 198: QYB6DvGM S478 41,9
Error in line 204: 5VaEYS1E A974 69,3
Error in line 234: S7\3 S7\3 \8,7
Error in line 232: QYB6DvGM A974 54,7
Error in line 226: 5DKYrl A801 203,8
Error in line 243: 5DKYrl A801 34,9
